--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "antd": "^5.25.1",
+    "antd": "^5.25.3",
+    "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.510.0",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.19.2",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
