--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "antd": "^5.25.3",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
@@ -17,7 +18,9 @@
     "lucide-react": "^0.510.0",
     "react": "^18.3.1",
     "react-big-calendar": "^1.19.2",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
